# dot

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  settings.c  settings.h
utils/: file.c  file.h  localegen.py
